refactor(nitrite): split NitriteFilterBuilder into focused classes and break DynamicFieldNode cycle
Extract PatternConverter, ValueResolver, SpatialFilterFactory, and AssociationFilterResolver
from the god-class NitriteFilterBuilder. Replace the operator switch with an OperatorHandler
registry. Eliminate the DynamicFieldNode→buildFieldFilter back-reference by introducing
AssociationFieldNode with an AssociationFieldEvaluator callback and extracting the shared
buildAssociationOrNestedField path. Add PatternConverterSpec and ValueResolverSpec unit tests.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>